--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,24 @@
         <div class="columns">
             <div class="column col-xs-12">
                 <h1 class="pt-2">Weather Demo</h1>
+                <div class="input-group mb-2 d-hide" id="authForm">
+                    <input type="text" value="test" class="form-input" placeholder="Login" id="authInputLogin" required>
+                    <input type="password" value="testtest" class="form-input" placeholder="Password" id="authInputPassword" required>
+                    <button class="btn btn-success input-group-btn" type="button" id="authBtnLogin">Login</button>
+                </div>
+                <div class="card mb-2 d-hide" id="authStatus">
+                    <div class="card-header">
+                        <div class="card-title h6">You are logged in as <b id="authStatusLogin"></b>!</div>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-error input-group-btn" id="authBtnLogout">Logout</button>
+                    </div>
+                </div>
                 <div class="input-group mb-2">
                     <input type="text" class="form-input" placeholder="City" id="inputCity" required>
-                    <button class="btn btn-primary input-group-btn" id="btnSubmit">Submit</button>
+                    <button class="btn btn-primary input-group-btn" type="button" id="btnSubmit">Submit</button>
                 </div>
-                <div class="card" id="contRes">
+                <div class="card d-hide" id="contRes">
                     <div class="card-header">
                         <div class="card-title h5" id="contResTitle"></div>
                         <div class="card-subtitle text-gray" id="contResDate"></div>
